feat(users): Add routes
